k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: dev
  labels:
    app: mongodb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999

      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db

          securityContext:
            capabilities:
              drop:
                - ALL

          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
